# grouse

./: .env.dist  .gitignore  CHANGELOG.md  CITATION.cff  Justfile  LICENSE.txt  README.md  dev.requirements.txt  pyproject.toml
.github/workflows/: ci.yml
example_data/: grounded_qa.jsonl
grouse/: __init__.py  dtos.py  grounded_qa_evaluator.py  main.py  meta_evaluator.py  metric_formats.py  plot.py  register_models.py  utils.py
grouse/gpt4_prompts/: answer_relevancy.txt.jinja  completeness.txt.jinja  faithfulness.txt  faithfulness.txt.jinja  usefulness.txt
grouse/llm_calls/: cached_instructor.py  tracker.py
tests/: test_grounded_qa_evaluator.py  test_utils.py
