[project]
name = "grouse"
description = "Evaluate Grounded Question Answering models and Grounded Question Answering evaluator models."
version = "0.0.1"
requires-python = ">=3.9,<3.13"
authors = [
    { name = "Sacha Muller", email = "sacha.muller@illuin.tech" },
    { name = "Antonio Loison", email = "antonio.loison@illuin.tech" },
    { name = "Bilel Omrani", email = "bilel.omrani@illuin.tech" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "litellm>=1.41.0,<2.0.0",
    "instructor>=1.3.5,<2.0.0",
    "diskcache>=5.6.0,<6.0.0",
    "numpy>=1.21.2,<3.0.0",
    "jsonlines>=4.0.0,<5.0.0",
    "datasets==2.20.0"
]

[project.urls]
homepage = "https://github.com/illuin-tech/grouse"
repository = "https://github.com/illuin-tech/grouse"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
grouse = "grouse.main:cli"

[tool.setuptools.packages.find]
include = ["grouse", "grouse.*"]

[tool.black]
line-length = 88
extend-exclude = "^.venv"

[tool.ruff]
line-length = 88

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
enable_error_code = ["ignore-without-code"]
exclude = ["venv/", ".venv/"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/typings"
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["datasets"]
ignore_missing_imports = true
